syntax = "proto3";
package provider.v1;
option go_package = "github.com/projectbeskar/virtrigaud/proto/rpc/provider/v1;providerv1";

// Power operations enum
enum PowerOp {
  POWER_OP_UNSPECIFIED = 0;
  POWER_OP_ON = 1;
  POWER_OP_OFF = 2;
  POWER_OP_REBOOT = 3;
  POWER_OP_SHUTDOWN_GRACEFUL = 4;  // Graceful shutdown using guest tools
}

// Task reference for async operations
message TaskRef {
  string id = 1;
}

// Empty message for operations with no parameters
message Empty {}

// Validate provider connectivity and configuration
message ValidateRequest {}
message ValidateResponse {
  bool ok = 1;
  string message = 2;
}

// Create a new virtual machine
message CreateRequest {
  string name = 1;
  bytes user_data = 2; // Already rendered cloud-init/ignition data
  
  // JSON-encoded provider-agnostic specifications
  string class_json = 3;     // VMClass
  string image_json = 4;     // VMImage  
  string networks_json = 5;  // []NetworkAttachment
  string disks_json = 6;     // []DiskSpec
  string placement_json = 7; // Placement
  repeated string tags = 8;  // Tags
}

message CreateResponse {
  string id = 1;       // Provider-specific VM identifier
  TaskRef task = 2;    // Optional task reference for async operations
}

// Delete a virtual machine
message DeleteRequest {
  string id = 1;
}

// Power control operations
message PowerRequest {
  string id = 1;
  PowerOp op = 2;
  int32 graceful_timeout_seconds = 3;  // Timeout for graceful operations (shutdown/reboot)
}

// Reconfigure virtual machine resources
message ReconfigureRequest {
  string id = 1;
  string desired_json = 2; // JSON-encoded desired state
}

// Upgrade VM hardware version
message HardwareUpgradeRequest {
  string id = 1;
  int32 target_version = 2; // Target hardware version (e.g., 21)
}

// Generic task response for async operations
message TaskResponse {
  TaskRef task = 1;
}

// Describe virtual machine current state
message DescribeRequest {
  string id = 1;
}

message DescribeResponse {
  bool exists = 1;
  string power_state = 2;
  repeated string ips = 3;
  string console_url = 4;
  string provider_raw_json = 5; // Provider-specific additional data
}

// Check async task status
message TaskStatusRequest {
  TaskRef task = 1;
}

message TaskStatusResponse {
  bool done = 1;
  string error = 2; // Error message if task failed
}

// Snapshot operations
message SnapshotCreateRequest {
  string vm_id = 1;
  string name_hint = 2;
  bool include_memory = 3; // Include memory state if supported
  string description = 4;
}

message SnapshotCreateResponse {
  string snapshot_id = 1;
  TaskRef task = 2;
}

message SnapshotDeleteRequest {
  string vm_id = 1;
  string snapshot_id = 2;
}

message SnapshotRevertRequest {
  string vm_id = 1;
  string snapshot_id = 2;
}

// Clone operations
message CloneRequest {
  string source_vm_id = 1;
  string target_name = 2;
  bool linked = 3; // Best-effort linked clone
  
  // JSON-encoded specifications for customization
  string class_json = 4;     // VMClass overrides
  string placement_json = 5; // Placement hints
  string customize_json = 6; // Customization spec
}

message CloneResponse {
  string target_vm_id = 1;
  TaskRef task = 2;
}

// Image preparation operations
message ImagePrepareRequest {
  string image_json = 1; // JSON-encoded VMImage spec
  string target_name = 2; // Target template/image name
  string storage_hint = 3; // Storage location hint (datastore, pool, etc.)
}

// Disk export operations for migration
message ExportDiskRequest {
  string vm_id = 1;            // VM identifier
  string disk_id = 2;          // Disk identifier (optional, defaults to primary disk)
  string snapshot_id = 3;      // Snapshot to export from (optional)
  string destination_url = 4;  // Where to upload the disk (S3, HTTP, etc.)
  string format = 5;           // Desired export format (qcow2, vmdk, raw)
  bool compress = 6;           // Enable compression during export
  map<string, string> credentials = 7; // Credentials for destination (access keys, tokens)
}

message ExportDiskResponse {
  string export_id = 1;        // Export operation identifier
  TaskRef task = 2;            // Task reference for async tracking
  int64 estimated_size_bytes = 3; // Estimated size of export
  string checksum = 4;         // Checksum of exported disk (SHA256)
}

// Disk import operations for migration
message ImportDiskRequest {
  string source_url = 1;       // Where to download the disk from (S3, HTTP, etc.)
  string storage_hint = 2;     // Target storage location (datastore, pool, etc.)
  string format = 3;           // Source disk format (qcow2, vmdk, raw)
  string target_name = 4;      // Name for the imported disk
  bool verify_checksum = 5;    // Verify checksum after import
  string expected_checksum = 6; // Expected checksum (SHA256)
  map<string, string> credentials = 7; // Credentials for source (access keys, tokens)
}

message ImportDiskResponse {
  string disk_id = 1;          // Imported disk identifier
  string path = 2;             // Path to imported disk
  TaskRef task = 3;            // Task reference for async tracking
  int64 actual_size_bytes = 4; // Actual size of imported disk
  string checksum = 5;         // Checksum of imported disk (SHA256)
}

// Get disk information for migration planning
message GetDiskInfoRequest {
  string vm_id = 1;            // VM identifier
  string disk_id = 2;          // Disk identifier (optional, defaults to primary disk)
  string snapshot_id = 3;      // Get info for specific snapshot (optional)
}

message GetDiskInfoResponse {
  string disk_id = 1;          // Disk identifier
  string format = 2;           // Disk format (qcow2, vmdk, raw)
  int64 virtual_size_bytes = 3; // Virtual size (capacity)
  int64 actual_size_bytes = 4;  // Actual size (allocated)
  string path = 5;             // Path or location
  bool is_bootable = 6;        // Is this a boot disk
  repeated string snapshots = 7; // Available snapshots
  string backing_file = 8;     // Backing file (for linked clones)
  map<string, string> metadata = 9; // Additional provider-specific metadata
}

// Capability check - what features does this provider support
message GetCapabilitiesRequest {}

message GetCapabilitiesResponse {
  bool supports_reconfigure_online = 1;
  bool supports_disk_expansion_online = 2;
  bool supports_snapshots = 3;
  bool supports_memory_snapshots = 4;
  bool supports_linked_clones = 5;
  bool supports_image_import = 6;
  repeated string supported_disk_types = 7;
  repeated string supported_network_types = 8;
  bool supports_disk_export = 9;           // Can export disks for migration
  bool supports_disk_import = 10;          // Can import disks from external sources
  repeated string supported_export_formats = 11; // Supported export formats (qcow2, vmdk, raw)
  repeated string supported_import_formats = 12; // Supported import formats
  bool supports_export_compression = 13;   // Supports compression during export
}

// Provider service definition
service Provider {
  // Validate provider configuration and connectivity
  rpc Validate(ValidateRequest) returns (ValidateResponse);
  
  // Create a new virtual machine
  rpc Create(CreateRequest) returns (CreateResponse);
  
  // Delete a virtual machine
  rpc Delete(DeleteRequest) returns (TaskResponse);
  
  // Perform power operations on a virtual machine
  rpc Power(PowerRequest) returns (TaskResponse);
  
  // Reconfigure virtual machine resources
  rpc Reconfigure(ReconfigureRequest) returns (TaskResponse);
  
  // Upgrade VM hardware version
  rpc HardwareUpgrade(HardwareUpgradeRequest) returns (TaskResponse);
  
  // Describe current virtual machine state
  rpc Describe(DescribeRequest) returns (DescribeResponse);
  
  // Check the status of an async task
  rpc TaskStatus(TaskStatusRequest) returns (TaskStatusResponse);
  
  // Snapshot operations
  rpc SnapshotCreate(SnapshotCreateRequest) returns (SnapshotCreateResponse);
  rpc SnapshotDelete(SnapshotDeleteRequest) returns (TaskResponse);
  rpc SnapshotRevert(SnapshotRevertRequest) returns (TaskResponse);
  
  // Clone operations
  rpc Clone(CloneRequest) returns (CloneResponse);
  
  // Image preparation and import
  rpc ImagePrepare(ImagePrepareRequest) returns (TaskResponse);
  
  // Get provider capabilities
  rpc GetCapabilities(GetCapabilitiesRequest) returns (GetCapabilitiesResponse);
  
  // Disk migration operations
  rpc ExportDisk(ExportDiskRequest) returns (ExportDiskResponse);
  rpc ImportDisk(ImportDiskRequest) returns (ImportDiskResponse);
  rpc GetDiskInfo(GetDiskInfoRequest) returns (GetDiskInfoResponse);
}
